tests/compile-fail/integration__integration__type_check__diffswitch__missing_first.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: unexpected token `:`
   ┌─ <input>:10:17
   │
10 │         int x = :4:4:6;
   │                 ^ unexpected token
   │
   = 
     Expected one of "!", "$", "%", "(", "++", "-", "--", "REG", "_S", "_f", "anim", "case", "cos", "default", "ecli", "entry", "float", "int", "mapfile", "offsetof", "script", "sin", "sqrt", "timeline", "timeof", "~", FLOAT, FLOAT_RAD, IDENT, INSTR, INT or STRING


